<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_settings_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="4dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/ic_arrow_back_black"
        android:text="@string/til"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:padding="15dp"
        android:id="@+id/uzb_latin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/settings_selector"
        android:clickable="true"
        android:fontFamily="@font/milliard_medium"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:text="@string/o_zbek_lotin"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBack"/>

    <TextView
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:id="@+id/qr_latin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/settings_selector"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/milliard_medium"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:text="@string/qaraqalpaq_lotin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uzb_latin" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/uzb_krill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/settings_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/o_zbek_krill"
        android:fontFamily="@font/milliard_medium"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_latin" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/qr_krill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/settings_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/qaralpaq_krill"
        android:fontFamily="@font/milliard_medium"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uzb_krill" />
</androidx.constraintlayout.widget.ConstraintLayout>